pkg/lang/syntax/testdata/ub/validate/invalid/factory/configuration-meta-unknown.ub
factory: {
  actions: {
    say: greet.say {
      @configuration: configuration.formal
    }
  }
}
